--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+* {
+  font-family: poppins, sans-serif;
+}
 .bg-image {
   position: relative;
   background-image: url("/static/images/bg-index.jpg");
@@ -22,13 +25,4 @@
 .secondary-text {
   color: #6d6d6d;
   font-size: 1rem;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: poppins, sans-serif;
 }
