--- a/templates/outputPage.html
+++ b/templates/outputPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Analisis Sentimen LSTM</title>
   </head>
   <body>
@@ -40,16 +41,23 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-6">
-              <form action="/outputPage" method="POST" enctype="multipart/form-data">
+              <form action="/analyze_text" method="POST">
                 <div class="input-group mb-3" id="inputSentiment">
-                  <input type="text" class="form-control" name="sentiment" placeholder="Masukan suatu ulasan" />
+                  <input type="text" class="form-control" name="text" placeholder="Masukan suatu ulasan" />
                   <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Submit</button>
                 </div>
-                <div class="input-group text-center" id="inputFile">
-                  <input type="file" class="form-control" name="file" accept=".csv" placeholder="Masukan File .csv" />
-                  <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Upload</button>
-                  <h5 class="secondary-text">Semakin banyak datanya maka akan semakin lama proses akan berlangsung</h5>
+              </form>
+              <form action="/analyze_csv" method="POST" enctype="multipart/form-data">
+                <div class="input-group text-center justify-content-center" id="inputFile">
+                  <div class="input-group">
+                    <input type="file" class="form-control" name="file" accept=".xlsx, .xls" placeholder="Masukan File .csv" />
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Upload</button>
+                  </div>
+                  <h5 class="secondary-text mt-3">Semakin banyak data, semakin lama prosesnya.</h5>
+                  <h5 class="secondary-text">Kolom ulasan harus bernama 'content' (tanpa tanda petik).</h5>
                 </div>
+              </form>
+              <form action="" method="POST" enctype="multipart/form-data">
                 <div class="input-group" id="inputKode">
                   <input type="text" class="form-control" name="app_code" placeholder="Masukan kode aplikasi" />
                   <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Submit</button>
@@ -69,12 +77,33 @@
               <h2>Hasil Analisis Sentimen</h2>
             </div>
           </div>
-          <div class="row mt-3 p-3">
-            <div class="col-md mt-3">
-              <h1>{{ sentiment }}</h1>
-            </div>
-            <div class="col-md">
-              <h1>KET</h1>
+          <div class="row mt-1 p-3">
+            <div class="col-md mt-3 justify-content-center">
+              {% if sentiment %}
+              <h4>Ulasan : {{ text }}</h4>
+              <h4>Prediksi sentimen {{ sentiment }}</h4>
+              {% endif %} {% if percentages %}
+              <canvas id="sentimentChart" width="200" height="200" class="justify-content-center"></canvas>
+              <script>
+                var ctx = document.getElementById("sentimentChart").getContext("2d");
+                var sentimentChart = new Chart (ctx, {
+                  type: 'pie',
+                  data: {
+                    labels : ['Positif', 'Negatif', 'Netral'],
+                    datasets: [{
+                      label: 'Persentase Sentimen',
+                      data: [{{ percentages['positif'] }},
+                            {{ percentages['negatif'] }},
+                            {{ percentages['netral'] }}],
+                    backgroundColor: ['#4CAF50', '#F44336', '#FFC107'],
+                    }]
+                  },
+                  options: {
+                    responsive: true,
+                    maintainAspectRatio: false
+                  }
+                })
+              </script>
             </div>
           </div>
           <div class="row mt-3 p-3">
@@ -83,7 +112,7 @@
                 <h4>Kesimpulan</h4>
               </div>
               <div class="col-md-1">
-                <button class="btn btn-primary">Download</button>
+                <a href="/download/{{ download_link }}"><button class="btn btn-primary">Download</button></a>
               </div>
             </div>
             <div class="row">
@@ -92,18 +121,10 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam aliquid inventore velit. Veniam sapiente natus libero suscipit voluptate, illum officiis, cum dolores eos incidunt quos esse molestiae molestias voluptatibus
                   repellendus.
                 </h5>
-                <!-- <h3>Hasil Prediksi: {{ sentiment }}</h3>
-
-                <h5>Raw Input: {{ raw }}</h5>
-                <h5>Setelah Cleaning: {{ cleaned }}</h5>
-                <h5>Setelah Casefolding: {{ casefolded }}</h5>
-                <h5>Setelah Fix Slangwords: {{ fixed_slang }}</h5>
-                <h5>Setelah Tokenizing: {{ tokenized }}</h5>
-                <h5>Setelah Filtering Stopwords: {{ filtered }}</h5>
-                <h5>Setelah Stemming: {{ stemmed }}</h5> -->
               </div>
             </div>
           </div>
+          {% endif %}
         </div>
         <div class="row mt-3 p-3">
           <div class="row mt-3">
