--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                   <h5 class="secondary-text">Kolom ulasan harus bernama 'content' (tanpa tanda petik).</h5>
                 </div>
               </form>
-              <form action="" method="POST" enctype="multipart/form-data">
+              <form action="/analyze_appcode" method="POST" enctype="multipart/form-data">
                 <div class="input-group" id="inputKode">
                   <input type="text" class="form-control" name="app_code" placeholder="Masukan kode aplikasi" />
                   <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Submit</button>
